Update website content

--- a/research.html
+++ b/research.html
@@ -271,7 +271,7 @@
                                                     Dynamic programming can handle this numerically, 
                                                     but the standard approach suffers from the <em> curse of 
                                                     dimensionality</em>. To address this, I develop <strong> reinforcement learning </strong> 
-                                                    methods that efficiently approximate the optimal speed profiles. 
+                                                    methods that efficiently generate the approximate optimal speed profiles. 
                                                 </p> 
                                                 <p>
                                                     Concretely, I use three complementary <em> approximators </em> for value functions: a rollout 
