Update website content

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-  <title>Tong Liu</title>
+  <title>Tong Liu - New York University (NYU) | Personal Homepage</title>
 
   <meta name="author" content="Jon Barron">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Personal homepage of Tong Liu, a student at New York University (NYU). This page introduces Tong Liu's research experience.">
   <link rel="shortcut icon" href="images/favicon/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
 
