Update website content

--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
 
 </head>
 
+<!-- 请将此代码片段复制并粘贴到您 index.html 文件中 </body> 标签的正上方 -->
+<hr style="border: 0; height: 1px; background: #ddd; margin: 40px 20px 20px 20px;">
+<p style="text-align: center; font-size: 14px; color: #666; padding-bottom: 20px;">
+    Site last updated on <span id="last-updated-date"></span>
+</p>
+
+
 <body>
   <table
     style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
