--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
   <meta name="author" content="Jon Barron">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Personal homepage of Tong Liu, a student at New York University (NYU). This page introduces Tong Liu's research experience.">
+  <meta name="description"
+    content="Personal homepage of Tong Liu, a student at New York University (NYU). This page introduces Tong Liu's research experience.">
   <link rel="shortcut icon" href="images/favicon/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
 
@@ -168,7 +169,7 @@
                 <td style="padding:0px">
                   <br>
                   <p style="text-align:center;font-size:small;">
-                    Design and source code from <a href="https://jonbarron.info/">Jon Barron</a>'s website
+                    Last update: <span id="last-updated"></span> | Design and source code from <a href="https://jonbarron.info/">Jon Barron</a>'s website | 
                   </p>
                 </td>
               </tr>
@@ -178,16 +179,13 @@
       </tr>
   </table>
   <!-- 在你的HTML中添加 -->
-<p>最后更新: <span id="last-updated"></span></p>
+  <p>最后更新: <span id="last-updated"></span></p>
+  <script>
+    // 显示当前页面的最后修改时间
+    document.getElementById('last-updated').textContent =
+      document.lastModified;
+  </script>
 
 </body>
-
-
-
-<script>
-  // 显示当前页面的最后修改时间
-  document.getElementById('last-updated').textContent = 
-    document.lastModified;
-</script>
 
 </html>
