--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 <td style="padding:0px">
                   <br>
                   <p style="text-align:center;font-size:small;">
-                    Last update: <span id="last-updated"></span> | Design and source code from <a href="https://jonbarron.info/">Jon Barron</a>'s website | 
+                    Last update: <span id="last-updated"></span> | Design and source code from <a href="https://jonbarron.info/">Jon Barron</a>'s website
                   </p>
                 </td>
               </tr>
@@ -178,8 +178,7 @@
         </td>
       </tr>
   </table>
-  <!-- 在你的HTML中添加 -->
-  <p>最后更新: <span id="last-updated"></span></p>
+  
   <script>
     // 显示当前页面的最后修改时间
     document.getElementById('last-updated').textContent =
