--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           </table>
 
 
-          <table style="width:100%; margin:0 auto; border:0; border-spacing:0; padding:16px;">
+          <!-- <table style="width:100%; margin:0 auto; border:0; border-spacing:0; padding:16px;">
             <tbody>
               <tr>
                 <td>
@@ -129,7 +129,7 @@
           </table>
           <table
             style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
-            <tbody>
+            <tbody> -->
 
 
               <!-- <tr>
