--- a/index.html
+++ b/index.html
@@ -29,16 +29,20 @@
             <tbody>
               <tr>
                 <td
-                  style="padding:10px;width:33.3%;text-align:center;vertical-align:middle;border-bottom:1px solid #ccc;">
+                  style="padding:10px;width:25%;text-align:center;vertical-align:middle;border-bottom:1px solid #ccc;">
                   <a href="index.html" class="nav-link">Home</a>
                 </td>
                 <td
-                  style="padding:10px;width:33.3%;text-align:center;vertical-align:middle;border-bottom:1px solid #ccc;">
+                  style="padding:10px;width:25%;text-align:center;vertical-align:middle;border-bottom:1px solid #ccc;">
                   <a href="research.html" class="nav-link">Research</a>
                 </td>
                 <td
-                  style="padding:10px;width:33.3%;text-align:center;vertical-align:middle;border-bottom:1px solid #ccc;">
+                  style="padding:10px;width:25%;text-align:center;vertical-align:middle;border-bottom:1px solid #ccc;">
                   <a href="publications.html" class="nav-link">Publications</a>
+                </td>
+                <td
+                  style="padding:10px;width:25%;text-align:center;vertical-align:middle;border-bottom:1px solid #ccc;">
+                  <a href="cv.html" class="nav-link">CV</a>
                 </td>
               </tr>
             </tbody>
@@ -132,7 +136,7 @@
             <tbody> -->
 
 
-              <!-- <tr>
+          <!-- <tr>
               <td align="center" style="padding:16px;width:20%;vertical-align:middle">
 						     <div class="colored-box" style="background-color: #c6b89e;">
 								 <h2>Academic Service</h2>
@@ -145,7 +149,7 @@
 
 
 
-              <!-- <tr>
+          <!-- <tr>
               <td align="center" style="padding:16px;width:20%;vertical-align:middle">
 						     <div class="colored-box" style="background-color: #edd892;">
 								 <h2>Teaching</h2>
@@ -160,24 +164,23 @@
               </td>
             </tr> -->
 
-            </tbody>
-          </table>
-          <table
-            style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
-            <tbody>
-              <tr>
-                <td style="padding:0px">
-                  <br>
-                  <p style="text-align:center;font-size:small;">
-                    Last update on <span id="last-updated"></span> | Design and source code from <a
-                      href="https://jonbarron.info/">Jon Barron</a>'s website
-                  </p>
-                </td>
-              </tr>
-            </tbody>
-          </table>
+    </tbody>
+  </table>
+  <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+    <tbody>
+      <tr>
+        <td style="padding:0px">
+          <br>
+          <p style="text-align:center;font-size:small;">
+            Last update on <span id="last-updated"></span> | Design and source code from <a
+              href="https://jonbarron.info/">Jon Barron</a>'s website
+          </p>
         </td>
       </tr>
+    </tbody>
+  </table>
+  </td>
+  </tr>
   </table>
 
   <script>
