--- a/publications.html
+++ b/publications.html
@@ -22,16 +22,20 @@
                         <tbody>
                             <tr>
                                 <td
-                                    style="padding:10px;width:33.3%;text-align:center;vertical-align:middle;border-bottom:1px solid #ccc;">
+                                    style="padding:10px;width:25%;text-align:center;vertical-align:middle;border-bottom:1px solid #ccc;">
                                     <a href="index.html" class="nav-link">Home</a>
                                 </td>
                                 <td
-                                    style="padding:10px;width:33.3%;text-align:center;vertical-align:middle;border-bottom:1px solid #ccc;">
+                                    style="padding:10px;width:25%;text-align:center;vertical-align:middle;border-bottom:1px solid #ccc;">
                                     <a href="research.html" class="nav-link">Research</a>
                                 </td>
                                 <td
-                                    style="padding:10px;width:33.3%;text-align:center;vertical-align:middle;border-bottom:1px solid #ccc;">
+                                    style="padding:10px;width:25%;text-align:center;vertical-align:middle;border-bottom:1px solid #ccc;">
                                     <a href="publications.html" class="nav-link">Publications</a>
+                                </td>
+                                <td
+                                    style="padding:10px;width:25%;text-align:center;vertical-align:middle;border-bottom:1px solid #ccc;">
+                                    <a href="cv.html" class="nav-link">CV</a>
                                 </td>
                             </tr>
                         </tbody>
