--- a/research.html
+++ b/research.html
@@ -22,16 +22,20 @@
                         <tbody>
                             <tr>
                                 <td
-                                    style="padding:10px;width:33.3%;text-align:center;vertical-align:middle;border-bottom:1px solid #ccc;">
+                                    style="padding:10px;width:25%;text-align:center;vertical-align:middle;border-bottom:1px solid #ccc;">
                                     <a href="index.html" class="nav-link">Home</a>
                                 </td>
                                 <td
-                                    style="padding:10px;width:33.3%;text-align:center;vertical-align:middle;border-bottom:1px solid #ccc;">
+                                    style="padding:10px;width:25%;text-align:center;vertical-align:middle;border-bottom:1px solid #ccc;">
                                     <a href="research.html" class="nav-link">Research</a>
                                 </td>
                                 <td
-                                    style="padding:10px;width:33.3%;text-align:center;vertical-align:middle;border-bottom:1px solid #ccc;">
+                                    style="padding:10px;width:25%;text-align:center;vertical-align:middle;border-bottom:1px solid #ccc;">
                                     <a href="publications.html" class="nav-link">Publications</a>
+                                </td>
+                                <td
+                                    style="padding:10px;width:25%;text-align:center;vertical-align:middle;border-bottom:1px solid #ccc;">
+                                    <a href="cv.html" class="nav-link">CV</a>
                                 </td>
                             </tr>
                         </tbody>
@@ -243,7 +247,7 @@
                                     <hr style="border: 0; height: 1px; background: #ddd;">
                                 </td>
                             </tr>
-                            
+
                             <!-- 研究方向 4 -->
                             <tr>
                                 <td style="padding:20px;width:100%;vertical-align:middle">
@@ -265,24 +269,30 @@
 
                                             <!-- Right: Text -->
                                             <td style="width:50%;vertical-align:top;">
-                                                <p> As line conditions and operating scenarios grow more complex, 
-                                                    classical optimal control struggles to compute energy-efficient 
-                                                    train speed profiles. 
-                                                    Dynamic programming can handle this numerically, 
-                                                    but the standard approach suffers from the <em> curse of 
-                                                    dimensionality</em>. To address this, I develop <strong> reinforcement learning </strong> 
-                                                    methods that efficiently generate the approximate optimal speed profiles. 
-                                                </p> 
+                                                <p> As line conditions and operating scenarios grow more complex,
+                                                    classical optimal control struggles to compute energy-efficient
+                                                    train speed profiles.
+                                                    Dynamic programming can handle this numerically,
+                                                    but the standard approach suffers from the <em> curse of
+                                                        dimensionality</em>. To address this, I develop <strong>
+                                                        reinforcement learning </strong>
+                                                    methods that efficiently generate the approximate optimal speed
+                                                    profiles.
+                                                </p>
                                                 <p>
-                                                    Concretely, I use three complementary <em> approximators </em> for value functions: a rollout 
-                                                    estimator, an interpolation-based  
-                                                    approximator, and a neural-network approximator. 
-                                                    The resultant strategies can closely match solutions from the classical maximum 
-                                                    principle. To make the comparison, I resolve 
-                                                    an open question 
-                                                    by proving the <strong> uniqueness </strong> of the optimal trajectory 
-                                                    under <em>speed limit</em>  constraints (see left figure). 
-                                                    The proposed approach yields <em> energy-efficient  </em>driving  strategies in both single-train and multi-train operations 
+                                                    Concretely, I use three complementary <em> approximators </em> for
+                                                    value functions: a rollout
+                                                    estimator, an interpolation-based
+                                                    approximator, and a neural-network approximator.
+                                                    The resultant strategies can closely match solutions from the
+                                                    classical maximum
+                                                    principle. To make the comparison, I resolve
+                                                    an open question
+                                                    by proving the <strong> uniqueness </strong> of the optimal
+                                                    trajectory
+                                                    under <em>speed limit</em> constraints (see left figure).
+                                                    The proposed approach yields <em> energy-efficient </em>driving
+                                                    strategies in both single-train and multi-train operations
                                                     when exploiting <em> regenerative energy </em>. </p>
                                             </td>
                                         </tr>
