Update website content

--- a/cv.html
+++ b/cv.html
@@ -48,7 +48,7 @@
                             <!-- 标题 -->
                             <tr>
                                 <td style="padding:20px 20px 10px 20px;width:100%;vertical-align:middle">
-                                    <h1 style="margin-bottom:5px;">Tong Liu, Ph.D.</h1>
+                                    <h1 style="margin-bottom:5px;">Tong Liu, Ph.D. Candidate</h1>
                                 </td>
                             </tr>
 
