Update website content

--- a/cv.html
+++ b/cv.html
@@ -64,11 +64,12 @@
                                             Brooklyn, NY
                                         </p>
                                         <p style="margin:5px 0;font-style:italic;">
-                                            Ph.D. in Electrical Engineering, 05/2017
+                                            Ph.D. in Electrical Engineering, 12/2025 (expected)
                                         </p>
                                         <ul style="margin:5px 0 15px 20px;">
-                                            <li>Dissertation Topic: Biologically inspired adaptive optimal control and
-                                                learning</li>
+                                            <li>Dissertation Topic: Distributed Optimization and Learning-Based Control
+                                                 of Networked Systems with Applications to Intelligent Transportation
+                                            </li>
                                             <li>Advisor: Prof. Zhong-Ping Jiang</li>
                                         </ul>
                                     </div>
