Update website content

--- a/cv.html
+++ b/cv.html
@@ -67,8 +67,8 @@
                                             Ph.D. in Electrical Engineering, 12/2025 (expected)
                                         </p>
                                         <ul style="margin:5px 0 15px 20px;">
-                                            <li>Dissertation Topic: Distributed Optimization and Learning-Based Control
-                                                 of Networked Systems with Applications to Intelligent Transportation
+                                            <li>Dissertation Topic: Distributed Optimization and Data-Driven 
+                                                Control of Networked Systems with Applications to Intelligent Transportation
                                             </li>
                                             <li>Advisor: Prof. Zhong-Ping Jiang</li>
                                         </ul>
@@ -76,23 +76,26 @@
 
                                     <!-- M.S. -->
                                     <div style="margin-top:15px;">
+                                        <p style="margin:5px 0;">
+                                            <strong>Beijing Jiaotong University</strong>,
+                                            Beijing, China
+                                        </p>
                                         <p style="margin:5px 0;font-style:italic;">
-                                            M.S. in Electrical Engineering, 05/2014
+                                            M.S. in Traffic Information Engineering and Control, 07/2020
                                         </p>
                                         <ul style="margin:5px 0 15px 20px;">
-                                            <li>Thesis Topic: Adaptive dynamic programming and optimal control of
-                                                nonlinear nonaffine systems</li>
-                                            <li>Advisor: Prof. Zhong-Ping Jiang</li>
+                                            <li>Thesis Topic: Energy-Efficient Train Control Methods Based on Approximate Dynamic Programming in Urban Rail Transit</li>
+                                            <li>Advisor: Prof. Jing Xun</li>
                                         </ul>
                                     </div>
 
                                     <!-- B.E. -->
                                     <div style="margin-top:15px;">
                                         <p style="margin:5px 0;">
-                                            <strong>Huazhong University of Science and Technology</strong>, Wuhan, China
+                                            <strong>Beijing Jiaotong University</strong>, Beijing, China
                                         </p>
                                         <p style="margin:5px 0;font-style:italic;">
-                                            B.E. in Automation, 06/2012
+                                            B.E. in Rail Traffic Signal and Control, 07/2017
                                         </p>
                                     </div>
                                 </td>
