Update website content

--- a/cv.html
+++ b/cv.html
@@ -67,8 +67,8 @@
                                             Ph.D. in Electrical Engineering, 12/2025 (expected)
                                         </p>
                                         <ul style="margin:5px 0 15px 20px;">
-                                            <li>Dissertation Topic: Distributed Optimization and Data-Driven 
-                                                Control of Networked Systems with Applications to Intelligent Transportation
+                                            <li>Dissertation: Distributed optimization and learning-based 
+                                                control of networked systems with applications to intelligent transportation
                                             </li>
                                             <li>Advisor: Prof. Zhong-Ping Jiang</li>
                                         </ul>
@@ -84,7 +84,7 @@
                                             M.S. in Traffic Information Engineering and Control, 07/2020
                                         </p>
                                         <ul style="margin:5px 0 15px 20px;">
-                                            <li>Thesis Topic: Energy-Efficient Train Control Methods Based on Approximate Dynamic Programming in Urban Rail Transit</li>
+                                            <li>Thesis: Energy-efficient train control methods based on approximate dynamic programming in urban rail transit</li>
                                             <li>Advisor: Prof. Jing Xun</li>
                                         </ul>
                                     </div>
