Update website content

--- a/cv.html
+++ b/cv.html
@@ -68,7 +68,7 @@
                                         </p>
                                         <ul style="margin:5px 0 15px 20px;">
                                             <li>Dissertation: Distributed optimization and learning-based 
-                                                control of networked systems with applications to intelligent transportation
+                                                control for networked systems with applications to intelligent transportation
                                             </li>
                                             <li>Advisor: Prof. Zhong-Ping Jiang</li>
                                         </ul>
