Update website content

--- a/cv.html
+++ b/cv.html
@@ -101,6 +101,20 @@
                                 </td>
                             </tr>
 
+                            <!-- Awards Section (可选) -->
+                            <tr>
+                                <td style="padding:20px;width:100%;vertical-align:middle">
+                                    <h2 style="border-bottom:2px solid #333;padding-bottom:5px;">Honors and Awards</h2>
+                                    <div style="margin-top:15px;">
+                                        <ul style="margin:5px 0 15px 20px;">
+                                            <li>Best Paper Award, Conference Name, 2020</li>
+                                            <li>Graduate Fellowship, NYU, 2012-2017</li>
+                                        </ul>
+                                    </div>
+                                </td>
+                            </tr>
+
+
                             <!-- Experience Section -->
                             <tr>
                                 <td style="padding:20px;width:100%;vertical-align:middle">
@@ -137,18 +151,7 @@
                                 </td>
                             </tr>
 
-                            <!-- Awards Section (可选) -->
-                            <tr>
-                                <td style="padding:20px;width:100%;vertical-align:middle">
-                                    <h2 style="border-bottom:2px solid #333;padding-bottom:5px;">Awards & Honors</h2>
-                                    <div style="margin-top:15px;">
-                                        <ul style="margin:5px 0 15px 20px;">
-                                            <li>Best Paper Award, Conference Name, 2020</li>
-                                            <li>Graduate Fellowship, NYU, 2012-2017</li>
-                                        </ul>
-                                    </div>
-                                </td>
-                            </tr>
+
 
                         </tbody>
                     </table>
