Update website content

--- a/cv.html
+++ b/cv.html
@@ -52,13 +52,13 @@
                                 </td>
                             </tr>
 
-                            <!-- Education Section -->
                             <tr>
                                 <td style="padding:20px;width:100%;vertical-align:middle">
-                                    <h2 style="border-bottom:2px solid #333;padding-bottom:5px;">Education</h2>
+                                    <h2 style="border-bottom:2px solid #333;padding-bottom:5px;margin-bottom:10px;">
+                                        Education</h2>
 
                                     <!-- Ph.D. -->
-                                    <div style="margin-top:15px;">
+                                    <div style="margin-top:10px;">
                                         <p style="margin:5px 0;">
                                             <strong>New York University, Tandon School of Engineering</strong>,
                                             Brooklyn, NY
@@ -67,15 +67,16 @@
                                             Ph.D. in Electrical Engineering, 12/2025 (expected)
                                         </p>
                                         <ul style="margin:5px 0 15px 20px;">
-                                            <li>Dissertation: Distributed optimization and learning-based 
-                                                control for networked systems with applications to intelligent transportation
+                                            <li>Dissertation: Distributed optimization and learning-based
+                                                control for networked systems with applications to intelligent
+                                                transportation
                                             </li>
                                             <li>Advisor: Prof. Zhong-Ping Jiang</li>
                                         </ul>
                                     </div>
 
                                     <!-- M.S. -->
-                                    <div style="margin-top:15px;">
+                                    <div style="margin-top:10px;">
                                         <p style="margin:5px 0;">
                                             <strong>Beijing Jiaotong University</strong>,
                                             Beijing, China
@@ -84,13 +85,14 @@
                                             M.S. in Traffic Information Engineering and Control, 07/2020
                                         </p>
                                         <ul style="margin:5px 0 15px 20px;">
-                                            <li>Thesis: Energy-efficient train control methods based on approximate dynamic programming in urban rail transit</li>
+                                            <li>Thesis: Energy-efficient train control methods based on approximate
+                                                dynamic programming in urban rail transit</li>
                                             <li>Advisor: Prof. Jing Xun</li>
                                         </ul>
                                     </div>
 
                                     <!-- B.E. -->
-                                    <div style="margin-top:15px;">
+                                    <div style="margin-top:10px;">
                                         <p style="margin:5px 0;">
                                             <strong>Beijing Jiaotong University</strong>, Beijing, China
                                         </p>
@@ -101,14 +103,15 @@
                                 </td>
                             </tr>
 
-                            <!-- Awards Section (可选) -->
+                            <!-- Awards Section -->
                             <tr>
                                 <td style="padding:20px;width:100%;vertical-align:middle">
-                                    <h2 style="border-bottom:2px solid #333;padding-bottom:5px;">Honors and Awards</h2>
-                                    <div style="margin-top:15px;">
-                                        <ul style="margin:5px 0 15px 20px;">
-                                            <li>Best Paper Award, Conference Name, 2020</li>
-                                            <li>Graduate Fellowship, NYU, 2012-2017</li>
+                                    <h2 style="border-bottom:2px solid #333;padding-bottom:5px;margin-bottom:10px;">
+                                        Honors and Awards</h2>
+                                    <div style="margin-top:10px;">
+                                        <ul style="margin:5px 0 15px 0px;padding-left:20px;">
+                                            <li style="margin-bottom:8px;">Best Paper Award, Conference Name, 2020</li>
+                                            <li style="margin-bottom:8px;">Graduate Fellowship, NYU, 2012-2017</li>
                                         </ul>
                                     </div>
                                 </td>
@@ -119,7 +122,6 @@
                             <tr>
                                 <td style="padding:20px;width:100%;vertical-align:middle">
                                     <h2 style="border-bottom:2px solid #333;padding-bottom:5px;">Experience</h2>
-
                                     <!-- Experience 1 -->
                                     <div style="margin-top:15px;">
                                         <p style="margin:5px 0;">
