Update website content

--- a/cv.html
+++ b/cv.html
@@ -105,7 +105,7 @@
 
                             <!-- Awards Section -->
                             <tr>
-                                <td style="padding:20px;width:100%;vertical-align:middle">
+                                <td style="padding:0 20px 20px 20px;width:100%;vertical-align:middle">
                                     <h2 style="border-bottom:2px solid #333;padding-bottom:5px;margin-bottom:10px;">
                                         Honors and Awards</h2>
                                     <div style="margin-top:10px;">
