Update website content

--- a/cv.html
+++ b/cv.html
@@ -110,8 +110,11 @@
                                         Honors and Awards</h2>
                                     <div style="margin-top:10px;">
                                         <ul style="margin:5px 0 15px 0px;padding-left:20px;">
-                                            <li style="margin-bottom:8px;">Best Paper Award, Conference Name, 2020</li>
-                                            <li style="margin-bottom:8px;">Graduate Fellowship, NYU, 2012-2017</li>
+                                            <li style="margin-bottom:8px;">Dr. Li  Publication Award at NYU Tandon School of Engineering, 2025</li>
+                                            <li style="margin-bottom:8px;">School of Engineering Fellowship at NYU Tandon School of Engineering, 2021, 2025</li>
+                                            <li style="margin-bottom:8px;">Student Travel Award at IEEE Conference on Decision and Control, 2021 </li>
+                                            <li style="margin-bottom:8px;">Outstanding Graduate of Beijing, 2020 </li>
+                                            <li style="margin-bottom:8px;">National Scholarship, 2018, 2019 </li>
                                         </ul>
                                     </div>
                                 </td>
