--- a/cv.html
+++ b/cv.html
@@ -110,12 +110,18 @@
                                         Honors and Awards</h2>
                                     <div style="margin-top:10px;">
                                         <ul style="margin:5px 0 15px 0px;padding-left:20px;">
-                                            <li style="margin-bottom:8px;">Dr. Li Publication Award at NYU Tandon School of Engineering, 2025</li>
-                                            <li style="margin-bottom:8px;">School of Engineering Fellowship at NYU Tandon School of Engineering, 2021, 2025</li>
-                                            <li style="margin-bottom:8px;">Student Travel Award at IEEE Conference on Decision and Control, 2021 </li>
-                                            <li style="margin-bottom:8px;">Outstanding Graduate of Beijing, Beijing, China, 2020 </li>
-                                            <li style="margin-bottom:8px;">National Scholarship, Beijing, China, 2018, 2019 </li>
-                                            <li style="margin-bottom:8px;">National Endeavor Scholarship, Beijing, China, 2014, 2015, 2016</li>
+                                            <li style="margin-bottom:8px;">Dr. Li Publication Award at NYU Tandon School
+                                                of Engineering, 2025</li>
+                                            <li style="margin-bottom:8px;">School of Engineering Fellowship at NYU
+                                                Tandon School of Engineering, 2021, 2025</li>
+                                            <li style="margin-bottom:8px;">Student Travel Award at IEEE Conference on
+                                                Decision and Control, 2021 </li>
+                                            <li style="margin-bottom:8px;">Outstanding Graduate of Beijing, Beijing,
+                                                China, 2020 </li>
+                                            <li style="margin-bottom:8px;">National Scholarship, Beijing, China, 2018,
+                                                2019 </li>
+                                            <li style="margin-bottom:8px;">National Endeavor Scholarship, Beijing,
+                                                China, 2014, 2015, 2016</li>
                                         </ul>
                                     </div>
                                 </td>
@@ -124,8 +130,9 @@
 
                             <!-- Experience Section -->
                             <tr>
-                                <td style="padding:20px;width:100%;vertical-align:middle">
-                                    <h2 style="border-bottom:2px solid #333;padding-bottom:5px;">Experience</h2>
+                                <td style="padding:0 20px 20px 20px;width:100%;vertical-align:middle">
+                                    <h2 style="border-bottom:2px solid #333;padding-bottom:5px;margin-bottom:10px">
+                                        Teaching Experience</h2>
                                     <!-- Experience 1 -->
                                     <div style="margin-top:15px;">
                                         <p style="margin:5px 0;">
@@ -133,11 +140,13 @@
                                             Brooklyn, NY
                                         </p>
                                         <p style="margin:5px 0;font-style:italic;">
-                                            Research Assistant, 09/2012–05/2017
+                                            Teaching Assistant
                                         </p>
                                         <ul style="margin:5px 0 15px 20px;">
-                                            <li>Conducted research on adaptive control and reinforcement learning</li>
-                                            <li>Published multiple papers in top-tier conferences and journals</li>
+                                            <li>ECE-GY 5253, Applied Matrix Theory, Graduate Level, Instructor: Prof.
+                                                Zhong-Ping Jiang. </li>
+                                            <li>Summer 2022, Fall 2022, Spring 2023, Summer 2023, Spring
+                                                2024, Fall 2024, and Fall 2025. </li>
                                         </ul>
                                     </div>
 
