--- a/cv.html
+++ b/cv.html
@@ -142,11 +142,11 @@
                                         <p style="margin:5px 0;font-style:italic;">
                                             Teaching Assistant
                                         </p>
-                                        <ul style="margin:0px 0 15px 20px;">
+                                        <ul style="margin:5px 0 15px 0px;">
                                             <li>ECE-GY 5253, Applied Matrix Theory, Graduate Level, Instructor: Prof.
-                                                Zhong-Ping Jiang. </li>
+                                                Zhong-Ping Jiang </li>
                                             <li>Summer 2022, Fall 2022, Spring 2023, Summer 2023, Spring
-                                                2024, Fall 2024, and Fall 2025. </li>
+                                                2024, Fall 2024, and Fall 2025 </li>
                                         </ul>
                                     </div>
 
