--- a/cv.html
+++ b/cv.html
@@ -153,6 +153,44 @@
                                     <!-- 可以添加更多经历 -->
                                 </td>
                             </tr>
+                            <tr>
+                                <td style="padding:0 20px 20px 20px;width:100%;vertical-align:middle">
+                                    <h2 style="border-bottom:2px solid #333;padding-bottom:5px;margin-bottom:10px">
+                                        Professional Service</h2>
+                                    <!-- Experience 1 -->
+                                    <div style="margin-top:15px;">
+                                        <p style="margin:5px 0;">
+                                            <strong>Journal Reviewer</strong>,
+                                        </p>
+                                        <ul style="margin:5px 0 15px 0px;">
+                                            <li>Automatica, Annual Reviews in Control, IEEE Transactions on Neural
+                                                Networks and Learning Systems, IEEE
+                                                Transactions on Intelligent Transportation Systems, Neurocomputing, ISA
+                                                Transactions </li>
+                                        </ul>
+                                        <p style="margin:5px 0;">
+                                            <strong>Conference Reviewer</strong>,
+                                        </p>
+                                        <ul style="margin:5px 0 15px 0px;">
+                                            <li>IEEE Conference on Decision and Control, American Control Conference,
+                                                IFAC Symposium on Nonlinear Control
+                                                Systems, IEEE International Conference on Intelligent Transportation
+                                                Systems </li>
+                                        </ul>
+                                        <p style="margin:5px 0;">
+                                            <strong>Session Chair</strong>,
+                                        </p>
+                                        <ul style="margin:5px 0 15px 0px;">
+                                            <li>IFAC Symposium on Nonlinear Control Systems, Reykjavik, Iceland, July,
+                                                2025, “Lyapunov Methods II” Session </li>
+                                        </ul>
+
+                                    </div>
+
+                                    <!-- 可以添加更多经历 -->
+                                </td>
+                            </tr>
+
 
                             <!-- Skills Section (可选) -->
                             <tr>
