Update website content

--- a/cv.html
+++ b/cv.html
@@ -160,7 +160,7 @@
                                     <!-- Experience 1 -->
                                     <div style="margin-top:15px;">
                                         <p style="margin:5px 0;">
-                                            <strong>Journal Reviewer</strong>,
+                                            <strong>Journal Reviewer</strong>
                                         </p>
                                         <ul style="margin:5px 0 15px 0px;">
                                             <li>Automatica, Annual Reviews in Control, IEEE Transactions on Neural
@@ -169,7 +169,7 @@
                                                 Transactions </li>
                                         </ul>
                                         <p style="margin:5px 0;">
-                                            <strong>Conference Reviewer</strong>,
+                                            <strong>Conference Reviewer</strong>
                                         </p>
                                         <ul style="margin:5px 0 15px 0px;">
                                             <li>IEEE Conference on Decision and Control, American Control Conference,
@@ -178,7 +178,7 @@
                                                 Systems </li>
                                         </ul>
                                         <p style="margin:5px 0;">
-                                            <strong>Session Chair</strong>,
+                                            <strong>Session Chair</strong>
                                         </p>
                                         <ul style="margin:5px 0 15px 0px;">
                                             <li>IFAC Symposium on Nonlinear Control Systems, Reykjavik, Iceland, July,
