Update website content

--- a/cv.html
+++ b/cv.html
@@ -190,6 +190,18 @@
                                     <!-- 可以添加更多经历 -->
                                 </td>
                             </tr>
+                                                        <!-- Awards Section -->
+                            <tr>
+                                <td style="padding:0 20px 20px 20px;width:100%;vertical-align:middle">
+                                    <h2 style="border-bottom:2px solid #333;padding-bottom:5px;margin-bottom:10px;">
+                                        Technical Skills</h2>
+                                    <div style="margin-top:10px;">
+                                        <ul style="margin:5px 0 15px 0px;padding-left:20px;">
+                                            <li style="margin-bottom:8px;"><strong>Programming Languages</strong>: Python, JavaScript, Java, C, C++, R, MATLAB </li>
+                                        </ul>
+                                    </div>
+                                </td>
+                            </tr>
 
 
                             <!-- Skills Section (可选) -->
@@ -203,9 +215,6 @@
                                     </div>
                                 </td>
                             </tr>
-
-
-
                         </tbody>
                     </table>
 
