Update website content

--- a/cv.html
+++ b/cv.html
@@ -190,28 +190,22 @@
                                     <!-- 可以添加更多经历 -->
                                 </td>
                             </tr>
-                                                        <!-- Awards Section -->
+                            <!-- Awards Section -->
                             <tr>
                                 <td style="padding:0 20px 20px 20px;width:100%;vertical-align:middle">
                                     <h2 style="border-bottom:2px solid #333;padding-bottom:5px;margin-bottom:10px;">
                                         Technical Skills</h2>
                                     <div style="margin-top:10px;">
                                         <ul style="margin:5px 0 15px 0px;padding-left:20px;">
-                                            <li style="margin-bottom:8px;"><strong>Programming Languages</strong>: Python, JavaScript, Java, C, C++, R, MATLAB </li>
+                                            <li style="margin-bottom:8px;"><strong>Programming Languages</strong>:
+                                                Python, JavaScript, Git, Java, C, C++, R, MATLAB </li>
+                                            <li style="margin-bottom:8px;"><strong>Frameworks</strong>: Pytorch,
+                                                Tensorflow, Keras, Pandas, scikit-learn, Matplotlib</li>
+                                            <li style="margin-bottom:8px;"><strong>Large Language Models</strong>:
+                                                Hugging Face Transformers, PEFT, LoRA/QLoRA, RLHF, Langchain</li>
+                                            <li style="margin-bottom:8px;"><strong>Knowledge</strong>: Deep Learning,
+                                                Reinforcement Learning, Distributed Optimization, Systems Theory</li>
                                         </ul>
-                                    </div>
-                                </td>
-                            </tr>
-
-
-                            <!-- Skills Section (可选) -->
-                            <tr>
-                                <td style="padding:20px;width:100%;vertical-align:middle">
-                                    <h2 style="border-bottom:2px solid #333;padding-bottom:5px;">Skills</h2>
-                                    <div style="margin-top:15px;">
-                                        <p><strong>Programming:</strong> Python, MATLAB, C++</p>
-                                        <p><strong>Tools:</strong> TensorFlow, PyTorch, SUMO</p>
-                                        <p><strong>Areas:</strong> Control Theory, Machine Learning, Optimization</p>
                                     </div>
                                 </td>
                             </tr>
