Update website content

--- a/cv.html
+++ b/cv.html
@@ -134,8 +134,8 @@
                                     <h2 style="border-bottom:2px solid #333;padding-bottom:5px;margin-bottom:10px">
                                         Teaching Experience</h2>
                                     <!-- Experience 1 -->
-                                    <div style="margin-top:15px;">
-                                        <p style="margin:5px 0;">
+                                    <div style="margin-top:10px;">
+                                        <p style="margin:5px 0 15px 0px;">
                                             <strong>New York University, Tandon School of Engineering</strong>,
                                             Brooklyn, NY
                                         </p>
@@ -158,8 +158,8 @@
                                     <h2 style="border-bottom:2px solid #333;padding-bottom:5px;margin-bottom:10px">
                                         Professional Service</h2>
                                     <!-- Experience 1 -->
-                                    <div style="margin-top:15px;">
-                                        <p style="margin:5px 0;">
+                                    <div style="margin-top:10px;">
+                                        <p style="margin:5px 0 15px 0px;">
                                             <strong>Journal Reviewer</strong>
                                         </p>
                                         <ul style="margin:5px 0 15px 0px;">
