Update website content

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     Generally speaking, the two modules should be weakly coupled, i.e., the change of one module does not significantly affect the other module.
                     This idea is related to the concept of the small-gain theorem and time-scale separation in systems theory, which I have applied to robust distributed optimization
                     of complex networks. The result is surprsing: the achievement of the objective can be guaranteed for rather general 
-                    classes of uncertain systems subject to disturbances, as long as the appropriate modules are weakly coupled. Of course,
+                    classes of uncertain systems subject to disturbances, as long as appropriate modules are weakly coupled. Of course,
                     the "weak coupling" condition is non-trivial, and right language should be used to described it. This is also a potential
                     direction for future research in large language models (LLMs). As the training samples of LLMs are to be run out, how to continue
                     to improve the performance of LLMs will be a challenging problem. To achieve this rather involved goal, self-learning can be
