Update website content

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                   </p>
                   <p>
                     In what conditions, can this structure ensure the achievement of the overall goal?
-                    Generally speaking, the two modules should be weakly coupled, i.e., the change of one module does not significantly affect the other module.
+                    Generally speaking, the two modules should be weakly coupled, i.e., the failure of one module does not significantly affect the other module.
                     This idea is related to the concept of the small-gain theorem and time-scale separation in systems theory, which I have applied to robust distributed optimization
                     of complex networks. The result is surprsing: the achievement of the objective can be guaranteed for rather general 
                     classes of uncertain systems subject to disturbances, as long as appropriate modules are weakly coupled. Of course,
