Update website content

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                   </p>
                   <p> This is also a potential
                     direction for future research in large language models (LLMs). As the training samples of LLMs are to be run out, how to continue
-                    to improve the performance of LLMs will be a challenging problem. To achieve this rather involved goal, self-learning can be
+                    to improve the performance of LLMs will be a challenging problem. To achieve this goal, self-learning can be
                     a promising approach, but how to design the self-learning module and how to ensure the improvement of the overall performance
                     are still open questions. The docompostion and weak-coupling ideas may provide some insights to this problem: RLHF is a typical example where
                     the reward model and the policy model are weakly coupled, and the overall performance can be improved by smartly updating the two models.</p>
