Update website content

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                   <p>
                     The first question is related to nearly every engineering subject, this is because
                     we often break a complex system into smaller subsystems, each of which achieves a specific goal. This is the case, e.g.,
-                    to develop a user application, the front end handles user interactions and the back end manages data storage. 
+                    to develop a web application, the front end handles user interactions and the back end manages data storage. 
                     In distributed optimization, an optimizer reduces the overall loss and an aggregator ensures consensus among agents. 
                     In reinforcement learning, an actor learns to improve the policy and a critic evaluates the policy. All of these
                     topics are related to the first question. 
