--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     topics are related to the first question. 
                   </p>
                   <p>
-                    In what conditions, can this structure ensure the achievement of the overall goal?
+                    Under which conditions, can this structure ensure the achievement of the overall goal?
                     Generally speaking, the two modules should be weakly coupled, i.e., the failure of one module does not significantly affect the other module.
                     This idea is related to the concept of the small-gain theorem and time-scale separation in systems theory, which I have applied to robust distributed optimization
                     of complex networks. The result is surprsing: the achievement of the objective can be guaranteed for rather general 
