Update website content

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     particular solutions to the above two questions.
                   </p>
                   <p>
-                    The first question is related to nearly every engineering subject, this is because
+                    The first question is related to nearly every engineering subject,  because
                     we often break a complex system into smaller subsystems, each of which achieves a specific goal. This is the case, e.g.,
                     to develop a web application, the front end handles user interactions and the back end manages data storage. 
                     In distributed optimization, an optimizer reduces the overall loss and an aggregator ensures consensus among agents. 
